# OTA_SmartParking

./: README.md  rqt_image_view.sh  test.slx
0214_tc_dk/: Cpu0_Main.c
0214_tc_dk/TriCore Debug (TASKING)/: 02_10motor.hex  02_10motor.map  02_10motor.mdf  Cpu0_Main.d  Cpu0_Main.src  Cpu1_Main.d  Cpu1_Main.src  Cpu2_Main.d  Cpu2_Main.src  TASKING_C_C___Compiler-Include_paths__-I_.opt  subdir.mk
0214_tc_dk/inc/: EncMotor.h  Homo_Coordinate.h  Logger.h  OurCan.h  PID_CON.h  STM_Interrupt.h  UpdateInputs.h  decision_stateflow.h  gitstanley.h  gitstanley_types.h  rtGetInf.h  rt_defines.h  rt_nonfinite.h  wrapToPi.h
0214_tc_dk/src/: Driver_Stm.c  EncMotor.c  Homo_Coordinate.c  OurCan.c  OurCan_message.c  STM_Interrupt.c  UpadateInputs.c  atan2.c  decision_stateflow.c  gitstanley.c  gitstanley_initialize.c
02_10motor/: .cproject  .project  02_10motor TriCore Debug (TASKING).launch  Cpu0_Main.c
02_10motor/Libraries/: 02_10motor.OneEye
02_10motor/TriCore Debug (TASKING)/: 02_10motor.hex  02_10motor.map  02_10motor.mdf  Cpu0_Main.d  Cpu0_Main.src  Cpu1_Main.d  Cpu2_Main.d  Cpu2_Main.src  makefile  subdir.mk
02_10motor/inc/: ASCLIN_Shell_UART.h  ASCLIN_UART.h  Driver_Stm.h  EncMotor.h  GTM_ATOM_PWM.h  Homo_Coordinate.h  IMU_Driver.h  LED_Buzzer.h  Logger.h  MadgwickAHRS.h  Obstacle_Detection.h  OurCan.h  OurCan_message.h  OurCan_signal.h  PID_CON.h  STM_Interrupt.h  ToF.h  UpdateInputs.h  atan2.h  decision_stateflow.h  decision_stateflow_types.h  gitstanley.h  gitstanley_data.h  gitstanley_initialize.h  gitstanley_terminate.h  gitstanley_types.h  norm.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtwtypes.h  servo.h  wrapToPi.h
02_10motor/src/: ASCLIN_Shell_UART.c  Driver_Stm.c  EncMotor.c  GTM_ATOM_PWM.c  Homo_Coordinate.c  IMU_Driver.c  LED_Buzzer.c  Logger.c  MadgwickAHRS.c  OTA.c  Obstacle_Detection.c  OurCan.c  OurCan_message.c  PID_CON.c  STM_Interrupt.c  ToF.c  UpadateInputs.c  UpadateInputs_code.c  decision_stateflow.c  decision_stateflow.h  decision_stateflow_coded.c  gitstanley.c  gitstanley_initialize.c  gitstanley_terminate.c  norm.c  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c  servo.c  wrapToPi.c
AP_CGW_CCU/: can_setup_auto.sh  cmd.txt
AP_CGW_CCU/front_img/: camera.yaml
AP_CGW_CCU/front_wide_angle_camera/: ost.yaml
AutoDPJT/: .cproject  .project  AutoDPJT TriCore Debug (GCC).launch  AutoDPJT TriCore Debug (TASKING).launch  AutoDPJT TriCore Release (TASKING).launch  Cpu0_Main.c
AutoDPJT/TriCore Debug (GCC)/: AURIX_GCC_Compiler-Include_paths__-I_.opt  AutoDPJT.elf  AutoDPJT.hex  AutoDPJT.lst  Cpu0_Main.d  Cpu2_Main.d  makefile  sources.mk  subdir.mk
AutoDPJT/TriCore Debug (TASKING)/: AutoDPJT.elf  AutoDPJT.hex  AutoDPJT.map  AutoDPJT.mdf  Cpu0_Main.d  Cpu0_Main.src  Cpu1_Main.src  Cpu2_Main.src  TASKING_C_C___Compiler-Include_paths__-I_.opt  makefile  sources.mk  subdir.mk
AutoDPJT/TriCore Release (GCC)/: AURIX_GCC_Compiler-Include_paths__-I_.opt  AutoDPJT.elf  AutoDPJT.hex  AutoDPJT.lst  Cpu0_Main.d  Cpu1_Main.d  makefile  sources.mk  subdir.mk
AutoDPJT/TriCore Release (TASKING)/: AutoDPJT.hex  AutoDPJT.map  AutoDPJT.mdf  Cpu1_Main.d  Cpu1_Main.src  Cpu2_Main.d  Cpu2_Main.src  makefile  sources.mk  subdir.mk
ESP32_Client/ESP32_Websocket/: ESP32_Websocket.ino  myDataHandle.cpp  myDataHandle.h  myMessage.h  myUART.cpp  myUART.h  myWebsocket.cpp  myWebsocket.h
ESP32_Server/Esp32_Server/: Esp32_Server.ino
ESP32_Websocket/: ESP32_Websocket.ino
IMU_Driver/: IMU_Driver.c  IMU_Driver.h
Matlab/: motor_uart.slx
OTA_Server/: app.py
OTA_Server/template/: upload.html
TC275_Auto_Driving/: Cpu0_Main.c
TC275_Auto_Driving/TriCore Debug (TASKING)/: Cpu1_Main.src  TASKING_C_C___Compiler-Include_paths__-I_.opt  sources.mk
TC275_Auto_Driving/inc/: ASCLIN_Shell_UART.h  Driver_Stm.h  Homo_Coordinate.h  LED_Buzzer.h  MadgwickAHRS.h  OurCan_message.h  OurCan_signal.h  ToF.h  Ultra_Driver.h  UpdateInputs.h  decision_stateflow.h  decision_stateflow_types.h  gitstanley.h  rtGetNaN.h
TC275_Auto_Driving/src/: ASCLIN_Shell_UART.c  ASCLIN_UART.c  Driver_Stm.c  EncMotor.c  IMU_Driver.c  LED_Buzzer.c  MadgwickAHRS.c  OurCan.c  Ultra_Driver.c  UpadateInputs.c  decision_stateflow.c  gitstanley.c  norm.c  servo.c
TC275_BOOTLOADER/: Cpu0_Main.c  Lcf_Tasking_Tricore_Tc.lsl
TC275_Bootloader/: Cpu0_Main.c  Lcf_Tasking_Tricore_Tc.lsl
TC275_Controller/: Common_def.h  Controller_Logic.c  Controller_Logic.h  Cpu0_Main.c  Cpu1_Main.c  SPI_CPU.c  SPI_CPU.h  TC275_LCD_16x2.h
TC275_Controller/inc/: ASCLIN_Shell_UART.h  ASCLIN_UART.h  Common_def.h  Controller_Logic.h  Data_process.h  Delay.h  Driver_Stm.h  Message.h  SPI_CPU.h  TC275_LCD_16x2.h  (+1 more)
TC275_Manual_Control/: Cpu0_Main.c
TC275_PART_A/: Blinky_LED.c  Cpu0_Main.c  Lcf_Tasking_Tricore_Tc.lsl
TC275_VCU/: Cpu0_Main.c
Ultrasonic_Driver/: Ultra_Driver.c
front_img/: ost.yaml
jetson/: can_setup.sh  cmd.txt  kill_ps.sh  lane_code_run.sh  rqt_plot_view.sh
jetson/ros2_ws/src/camera_test/: CMakeLists.txt
jetson/ros2_ws/src/camera_test/include/camera_test/: camera_test_node.hpp
jetson/ros2_ws/src/camera_test/src/: camera_test_node.cpp  main.cpp
jetson/ros2_ws/src/lane_detection/: CMakeLists.txt  package.xml
jetson/ros2_ws/src/lane_detection/include/lane_detection/: lane_detection_node.hpp
jetson/ros2_ws/src/lane_detection/src/: camera_node.cpp  lane_detection_node.cpp  main.cpp  vision_node.cpp
jetson/src/lane_detection/: CMakeLists.txt  package.xml
jetson/src/lane_detection/config/: front_calibration.yaml  rear_calibration.yaml  wide_front_calibration.yaml  wide_rear_calibration.yaml
jetson/src/lane_detection/include/lane_detection/: CentralGateway.h  DevOption.hpp  MySocketCAN.h  MyWebSocketSession.h  OTADownloader.h  Protocol.h  SocketCAN.h  WebSocketServer.h  camera_node.hpp  vision_node.hpp
jetson/src/lane_detection/src/: CentralGateway.cpp  LockBasedQueue.cpp  MySocketCAN.cpp  MyWebSocketSession.cpp  OTADownloader.cpp  Protocol.cpp  SocketCAN.cpp  WebSocketServer.cpp  camera_node.cpp  main.cpp  vision_node.cpp
lateral_control/: decision_stateflow.slx
rear_img/: ost.yaml
(+1397 files in other folders)
